--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,6 +4,10 @@
     <string name="edit_expenses">Расход</string>
     <string name="name_of_expenses">Название</string>
     <string name="button_to_add">ДОБАВИТЬ</string>
+    <string name="toolbar_name">Учёт бюджета</string>
+    <string name="Expenses_tab">Расходы</string>
+    <string name="Income_tab">Доходы</string>
+    <string name="Balance_tab">Баланс</string>
 
 
 </resources>
