--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="edit_expenses">Consumption</string>
     <string name="name_of_expenses">Name</string>
     <string name="button_to_add">ADD</string>
+    <string name="toolbar_name">Budget accounting</string>
+    <string name="Expenses_tab">Expenses</string>
+    <string name="Income_tab">Income</string>
+    <string name="Balance_tab">Balance</string>
+
 
 </resources>
