убрал фрагмент баланс, все работает

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LoftSchool</string>
-    <string name="edit_expenses">Consumption</string>
+    <string name="edit_expenses">Price</string>
     <string name="name_of_expenses">Name</string>
     <string name="button_to_add">ADD</string>
     <string name="toolbar_name">Budget accounting</string>
