--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LoftSchool</string>
-    <string name="edit_expenses">Расход</string>
+    <string name="edit_expenses">Цена</string>
     <string name="name_of_expenses">Название</string>
     <string name="button_to_add">ДОБАВИТЬ</string>
     <string name="toolbar_name">Учёт бюджета</string>
