--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,5 +9,8 @@
     <string name="Income_tab">Доходы</string>
     <string name="Balance_tab">Баланс</string>
 
+    <string name="connection_lost">Извините, соединение прервано…</string>
+    <string name="success_added">Income was successfully added</string>
+
 
 </resources>
