--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,9 +5,11 @@
     <string name="name_of_expenses">Название</string>
     <string name="button_to_add">ДОБАВИТЬ</string>
     <string name="toolbar_name">Учёт бюджета</string>
-    <string name="Expenses_tab">Расходы</string>
-    <string name="Income_tab">Доходы</string>
+    <string name="expense">Expense</string>
+    <string name="income">Income</string>
     <string name="Balance_tab">Баланс</string>
+    <string name="expenses">Расходы</string>
+    <string name="incomes">Доходы</string>
 
     <string name="connection_lost">Извините, соединение прервано…</string>
     <string name="success_added">Income was successfully added</string>
