--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,12 @@
     <string name="name_of_expenses">Name</string>
     <string name="button_to_add">ADD</string>
     <string name="toolbar_name">Budget accounting</string>
-    <string name="Expenses_tab">Expenses</string>
-    <string name="Income_tab">Income</string>
+    <string name="expense">Expense</string>
+    <string name="income">Income</string>
     <string name="Balance_tab">Balance</string>
+    <string name="expenses">Expenses</string>
+    <string name="incomes">Incomes</string>
+
 
     <string name="connection_lost">Sorry, connection lost…</string>
     <string name="success_added">Income was successfully added</string>
