--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="connection_lost">Sorry, connection lost…</string>
     <string name="success_added">Income was successfully added</string>
+    <string name="login">Login</string>
 
 
 </resources>
