--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,5 +15,7 @@
     <string name="success_added">Income was successfully added</string>
     <string name="login">Войти</string>
 
+    <string name="client_secret">972841536315-224ca3khm9k6ed91g6eidne3hbgrl80i.apps.googleusercontent.com</string>
+    <string name="client_id">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</string>
 
 </resources>
