--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="login">Login</string>
 
     <string name="client_secret">972841536315-224ca3khm9k6ed91g6eidne3hbgrl80i.apps.googleusercontent.com</string>
+    <string name="client_secret2">972841536315-1f3qr661m85nmiub1pjp7dfqlergl360.apps.googleusercontent.com</string>
     <string name="client_id">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</string>
 
 
