--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="client_secret">972841536315-224ca3khm9k6ed91g6eidne3hbgrl80i.apps.googleusercontent.com</string>
     <string name="client_secret2">972841536315-1f3qr661m85nmiub1pjp7dfqlergl360.apps.googleusercontent.com</string>
     <string name="client_id">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</string>
+    <string name="selected">Selected: %1$s</string>
+    <string name="confirm">Are you sure you want to delete the selected items?</string>
+    <string name="remove">Delete</string>
 
 
 </resources>
