--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="expenses">Expenses</string>
     <string name="incomes">Incomes</string>
 
-
     <string name="connection_lost">Sorry, connection lost…</string>
     <string name="success_added">Income was successfully added</string>
     <string name="login">Login</string>
@@ -19,9 +18,12 @@
     <string name="client_secret">972841536315-224ca3khm9k6ed91g6eidne3hbgrl80i.apps.googleusercontent.com</string>
     <string name="client_secret2">972841536315-1f3qr661m85nmiub1pjp7dfqlergl360.apps.googleusercontent.com</string>
     <string name="client_id">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</string>
+
     <string name="selected">Selected: %1$s</string>
     <string name="confirm">Are you sure you want to delete the selected items?</string>
     <string name="remove">Delete</string>
-
+    <string name="currency_sign">%s $</string>
+    <string name="txt_Finance">Available finance</string>
+    <string name="balance">Balance</string>
 
 </resources>
